# Stereo_PCL

./: CMakeLists.txt  README.md  package.xml
data/: aligned_1.pcd  alt_pair00.pcd  alt_pair01.pcd  alt_pair02.pcd  alt_temp_pair00.pcd  alternate_implementation.pcd  census.pcd  concatenate.pcd  concatenate1.pcd  concatenate2.pcd  data.json  extra.pcd  icp_conc0.pcd  icp_conc1.pcd  icp_conc2.pcd  icp_conc3.pcd  icp_conc4.pcd  icp_concatenate.pcd  icp_done.pcd  icp_trans_conc0.pcd  icp_trans_conc1.pcd  icp_transform_concatenate.pcd  icp_trial.pcd  left_calib.json  pair00.pcd  pair001.pcd  pair002.pcd  pair003.pcd  pair02.pcd  pair03.pcd  pair04.pcd  pairs00pop.pcd  right_calib.json  screenshot-1422490150.cam  screenshot-1422490549.cam  screenshot-1422490809.cam  screenshot-1422491293.cam  screenshot-1422491512.cam  screenshot-1422512277.cam  screenshot-1422553966.cam  (+25 more)
src/: alt.cpp  alt.cpp~  alt_default_latest  alt_default_latest~  census.cpp  extra.cpp  main.cpp~  main_disp
